--- a/binary-saferustplus/1.md
+++ b/binary-saferustplus/1.md
@@ -278,3 +278,56 @@ See you later~
 
 --- 连接中断 ---
 ```
+
+最速 SIGSEGV：
+
+```
+Please input your token: 256:MEYCIQDRGm_v_YIBd5HzshlAQwahPR0eXiFMI_zAzZU-JLvAFQIhAO6SCgDNRpeZMHHqc6G6zi_B6IEYFis9m8q7Nq5xMV9H
+Running...
+Please choose:
+1. Create
+2. Read
+3. Write
+Enter the choice:
+1
+Please choose:
+1. Boxed
+2. Global
+3. Local
+Enter the choice:
+1
+Enter the size:
+0
+Please choice
+1. Read only
+2. Write only
+3. Read write
+Enter the choice:
+3
+Slot: 0
+Please choose:
+1. Create
+2. Read
+3. Write
+Enter the choice:
+3
+Enter the slot:
+0
+Enter the index:
+0
+Enter the value:
+1
+Please choose:
+1. Write (unwrap)
+2. Write (try)
+3. Write (unchecked)
+Enter the choice:
+1
+Here is Flag 1: flag{w0W_But-do-y0u-kN0w-Why_1T_SEgV}
+See you later~
+
+--- 程序已退出 [retcode=0] ---
+
+
+--- 连接中断 ---
+```
